--- a/djangocms_slick_slider/templates/djangocms_slick_slider/image.html
+++ b/djangocms_slick_slider/templates/djangocms_slick_slider/image.html
@@ -1,3 +1,5 @@
-<div class="plugin child">
-    <img src="{{ instance.image.url }}">
+<div class="plugin child slick-slide">
+    <div>
+        <img src="{{ instance.image.url }}">
+    </div>
 </div>
