--- a/example/example/templates/base.html
+++ b/example/example/templates/base.html
@@ -36,6 +36,9 @@
             </ul>
             {% block content %}{% endblock content %}
         </div>
+        
+        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         {% render_block "js" %}
     </body>
 </html>
