--- a/example/example/templates/base.html
+++ b/example/example/templates/base.html
@@ -28,7 +28,7 @@
         </style>
         {% render_block "css" %}
     </head>
-    <body>
+    <body style="background-color: #eee">
         {% cms_toolbar %}
         <div class="container">
             <ul class="nav">
