Readme + color option for slider arrows

--- a/djangocms_slick_slider/templates/djangocms_slick_slider/image.html
+++ b/djangocms_slick_slider/templates/djangocms_slick_slider/image.html
@@ -1,5 +1,3 @@
 <div class="plugin child slick-slide">
-    <div>
-        <img src="{{ instance.image.url }}">
-    </div>
+    <img align="center" src="{{ instance.image.url }}">
 </div>
