--- a/djangocms_slick_slider/templates/djangocms_slick_slider/base.html
+++ b/djangocms_slick_slider/templates/djangocms_slick_slider/base.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'vendor/slick-'|add:settings.SLICK_SLIDER_VERSION|add:'/slick/slick-theme.css' %}">
 
     <style type="text/css">
+        .slick-prev:before,
+        .slick-next:before {
+            color: {{ instance.arrow_color }}!important;
+        }
         .slick-slide img {
             width: 99%;
             margin: 0 auto; /* it centers any block level element */
