added templates to tests

--- a/djangocms_slick_slider/templates/djangocms_slick_slider/base.html
+++ b/djangocms_slick_slider/templates/djangocms_slick_slider/base.html
@@ -26,7 +26,7 @@
 
 {% endaddtoblock %}
 
-<div id="slider-wrapper">
+<div class="slider-wrapper" id="slider-{{ instance.id }}">
     <div class="image-slider">
         {# Loop over images we added to context #}
         {% for image in images %}
