feat: full width slider

--- a/djangocms_slick_slider/templates/djangocms_slick_slider/base.html
+++ b/djangocms_slick_slider/templates/djangocms_slick_slider/base.html
@@ -19,7 +19,7 @@
             color: {{ instance.arrow_color }}!important;
         }
         .single-image img {
-            width: 99%;
+            width: 100%;
             margin: 0 auto; /* it centers any block level element */
         }
     </style>
@@ -32,11 +32,15 @@
         {% for image in images %}
         <div class="single-image">
             {# Create image thumbnail, check link #}
-            {% thumbnail image.image child_width crop=False upscale=True as thumb %}
+            {% if instance.full_width %}
+              {% thumbnail image.image image.full_width_dimensions upscale=True as thumb %}
+            {% else %}
+              {% thumbnail image.image child_width crop=False upscale=True as thumb %}
+            {% endif %}
             {% if image.link %}<a href="{{ image.link }}" target="{{ image.link_target|yesno:"_blank," }}">{% endif %}
             <img data-lazy="{{ thumb.url }}">
             {% if image.link %}</a>{% endif %}
-            
+
             {# Add caption, if exists #}
             {% if image.caption_text %}
                 <div class="slider-caption-text">
