fix: allow images not to be lazy loaded

--- a/djangocms_slick_slider/templates/djangocms_slick_slider/base.html
+++ b/djangocms_slick_slider/templates/djangocms_slick_slider/base.html
@@ -41,14 +41,17 @@
               {% thumbnail image.image child_width crop=False upscale=True as thumb %}
             {% endif %}
             {% if image.link %}<a href="{{ image.link }}" target="{{ image.link_target|yesno:"_blank," }}">{% endif %}
+            {% if instance.lazy_load_images %}
             <img data-lazy="{{ thumb.url }}" alt="{{ image.image.default_alt_text }}">
+            {% else %}
+            <img src="{{ thumb.url }}" alt="{{ image.image.default_alt_text }}">
+            {% endif %}
             {% if image.link %}</a>{% endif %}
 
-            {# Add caption, if exists #}
             {% if image.caption_text %}
-                <div class="slider-caption-text">
-                {{image.caption_text|linebreaks}}
-                </div>
+            <div class="slider-caption-text">
+              {{ image.caption_text|linebreaks }}
+            </div>
             {% endif %}
         </div>
         {% endfor %}
